Refs #160116 - VideoView - fix spacing in case of external video link.

--- a/src/helpers/custom-styles.less
+++ b/src/helpers/custom-styles.less
@@ -2,4 +2,8 @@ div.video-view {
   video {
     margin-top: 1.5em;
   }
+
+  div.external-video {
+    margin-top: 1.5em;
+  }
 }
